--- a/styles.css
+++ b/styles.css
@@ -163,11 +163,31 @@ footer {
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
   body {
-    font-size: 14px;
+    font-size: 16px;
   }
-
+  .flags {
+    position: inherit;
+    grid-row: 1;
+    grid-column: 1/2;
+  }
+  .social-media {
+    grid-row: 1/2;
+    grid-column: 5/6;
+  }
+  .menu {
+    grid-row: 2/3;
+    grid-column: 1/6;
+    justify-self: center;
+    margin-top: 5px;
+  }
+  .menu a {
+    border: 1px solid white;
+    border-radius: 4px;
+    padding: 0px 5px;
+    color: white;
+  }
   .about {
     margin-left: 5vw;
     margin-right: 5vw;
@@ -209,8 +229,17 @@ footer {
   }
 }
 
-@media screen and (max-width: 470px) {
-  .menu {
-    margin-top: 25px;
+@media screen and (max-width: 420px) {
+  body {
+    font-size: 12px;
+  }
+  .menu a {
+    margin-right: 2px;
+  }
+}
+
+@media screen and (max-width: 310px) {
+  body {
+    font-size: 10px;
   }
 }
