--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ body {
 .logo2 {
   width: 70vw;
   /* transform: rotate(-8deg); */
-  margin-top: 5vh;
+  margin-top: 0;
   margin-left: 15vw;
 }
 
@@ -159,7 +159,7 @@ footer {
     padding: 10px 0px;
   }
   .logo2 {
-    margin-top: 35vh;
+    margin-top: 15vh;
   }
 }
 
@@ -238,5 +238,8 @@ footer {
   .flag {
     font-size: 14px;
     margin-left: 3px;
+  }
+  .logo2 {
+    margin-top: 25vh;
   }
 }
