--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
   margin: 0px;
   padding: 0px;
-  background-color: #0d0d0d;
+  background-color: #000000;
   font-family: "Poppins", sans-serif;
-  color: #eb6123;
+  color: #ffffff;
   font-size: 24px;
 }
 
@@ -12,7 +12,7 @@ body {
   grid-template-columns: repeat(6 1fr);
   position: sticky;
   top: 0;
-  background-color: #0d0d0d;
+  background-color: #000000;
   z-index: 10;
 }
 
@@ -33,7 +33,7 @@ body {
 
 .menu a {
   text-decoration: none;
-  color: #eb6123;
+  color: #ff0000;
   margin-right: 10px;
 }
 
@@ -44,7 +44,7 @@ body {
 }
 .social-media a {
   text-decoration: none;
-  color: #eb6123;
+  color: #ff0000;
   margin-right: 10px;
 }
 
@@ -60,10 +60,10 @@ body {
   text-decoration: none;
   margin-top: 10px;
   margin-left: 10px;
-  border: 1px solid #eb6123;
+  border: 1px solid #ff0000;
   border-radius: 4px;
   padding: 0px 2px;
-  color: #eb6123;
+  color: #ff0000;
 }
 
 /* main shit */
@@ -74,7 +74,7 @@ body {
 .logo2 {
   width: 70vw;
   /* transform: rotate(-8deg); */
-  margin-top: 0;
+  margin-top: -5vh;
   margin-left: 15vw;
 }
 
@@ -184,10 +184,10 @@ footer {
     display: flex;
   }
   .menu a {
-    border: 1px solid #eb6123;
+    border: 1px solid #ff0000;
     border-radius: 4px;
     padding: 0px 5px;
-    color: #eb6123;
+    color: #ff0000;
     margin: 0 auto;
   }
   .about {
