--- a/styles.css
+++ b/styles.css
@@ -72,10 +72,10 @@ body {
   height: 100vh;
 }
 .logo2 {
-  width: 70vw;
+  width: 80vw;
   /* transform: rotate(-8deg); */
   margin-top: -5vh;
-  margin-left: 15vw;
+  margin-left: 10vw;
 }
 
 /* about */
@@ -160,6 +160,8 @@ footer {
   }
   .logo2 {
     margin-top: 15vh;
+    width: 100vw;
+    margin-left: 0vw;
   }
 }
 
@@ -171,6 +173,10 @@ footer {
     position: inherit;
     grid-row: 1;
     grid-column: 1/2;
+  }
+  .flag {
+    border: 1px solid #ffffff;
+    color: #ffffff;
   }
   .social-media {
     grid-row: 1/2;
@@ -187,7 +193,7 @@ footer {
     border: 1px solid #ff0000;
     border-radius: 4px;
     padding: 0px 5px;
-    color: #ff0000;
+    color: #ffffff;
     margin: 0 auto;
   }
   .about {
@@ -228,6 +234,9 @@ footer {
   footer {
     margin-left: 5vw;
     font-size: 10px;
+  }
+  .social-media a {
+    color: #ffffff;
   }
 }
 
